apps/base/openwebui/openwebui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /app/backend/data
          name: open-webui-volume
      volumes:
      - name: open-webui-volume
        persistentVolumeClaim:
          claimName: open-webui-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: openwebui
spec:
  selector:
    app: open-webui
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8080
  type: NodePort
