apps/base/openwebui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui-frontend
  namespace: openwebui

spec:
  entryPoints:
  - websecure

  routes:
  - match: Host(`chat.local.reinthal.cc`)
    kind: Rule
    middlewares: []
    services:
    - name: open-webui-service
      port: 3000
  tls:
    secretName: local-reinthal-cc-tls
